# s-eye

./: .gitignore  CODE_CLEANUP_REPORT.md  HƯỚNG_DẪN_CHẠY.md  Idea.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  pyproject.toml
data/: ear_sequences.csv  ear_sequences_from_log.csv  sample_ear_sequences.csv
data/sample_splits/: test.csv  train.csv  val.csv
data/splits/: test.csv  train.csv  val.csv
docs/: ARCHITECTURE.md  ML_WORKFLOW.md
models/: drowsiness.onnx  lstm_drowsiness.pt  lstm_drowsiness_split.pt
scripts/: build_sequences_from_runtime_log.py  collect_labeled_ear.py  evaluate_lstm.py  export_lstm_onnx.py  run_dev.cmd  run_dev.ps1  split_sequences_by_session.py  train_lstm.py
src/: __init__.py  main.py
src/core/application/ports/: alarm.py  drowsiness_classifier.py  eye_detector.py  frame_source.py
src/core/application/use_cases/: process_frame.py
src/core/domain/entities/: driver_state.py
src/core/domain/services/: drowsiness_rules.py
src/core/domain/value_objects/: eye_landmarks.py
src/infrastructure/audio/: system_alarm.py
src/infrastructure/camera/: opencv_camera.py
src/infrastructure/ml/: __init__.py  onnx_drowsiness_classifier.py
src/infrastructure/vision/: manual_eye_detector.py  preprocess.py
src/presentation/cli/: __init__.py  monitor_loop.py
src/shared/: config.py
tests/unit/: test_drowsiness_rules.py  test_process_frame.py
