[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s-eye"
version = "0.1.0"
description = "Driver drowsiness warning system using classical computer vision"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "S-Eye Team" }]
dependencies = [
  "numpy>=1.26.0",
  "opencv-python>=4.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
s-eye = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
