[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s-eye"
version = "0.1.0"
description = "Driver drowsiness warning system using classical computer vision"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "S-Eye Team" }]
dependencies = [
  "numpy>=1.26.0",
  "opencv-python>=4.10.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0"
]
ml = [
  "onnxruntime>=1.18.0",
  "torch>=2.3.0",
  "onnx>=1.16.0",
  "onnxscript>=0.1.0"
]

[project.scripts]
s-eye = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
